--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,11 @@
                     <argLine>-Dfile.encoding=UTF-8</argLine>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>3.2.0</version>
+            </plugin>
 
             <!--  http://stackoverflow.com/questions/4305935/is-it-possible-to-supply-tomcat6s-context-xml-file-via-the-maven-cargo-plugin#4417945 -->
             <!-- https://codehaus-cargo.github.io/cargo/Tomcat+9.x.html -->
@@ -103,6 +108,8 @@
             </plugin>
         </plugins>
     </build>
+
+
 
     <dependencies>
         <!-- Logging with SLF4J & LogBack -->
