commit HW6 1.3 done

--- a/config/messages/app.properties
+++ b/config/messages/app.properties
@@ -12,4 +12,7 @@ meal.title=Meals
 meal.date=Date
 meal.description=Description
 meal.calories=Calories
+mealcreate.title=Create meal
+mealupdate.title=Update meal
+mealform.button=Save
 common.select=Select
